--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/phpunit tests",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
 
     },
